--- a/client/style/style.css
+++ b/client/style/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap');
 /* @import url('https://fonts.googleapis.com/css?family=Assistant:300,400,700&display=swap'); */
 
-html, body {
+html,
+body {
     font-family: 'Rubik', sans-serif;
     /* font-family: 'Assistant', sans-serif; */
     direction: rtl;
@@ -60,6 +61,7 @@ canvas {
 .bg-menu {
     /* display: none; */
     position: absolute;
+    display: none;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.192);
@@ -98,7 +100,7 @@ canvas {
     cursor: pointer;
 }
 
-.menu div{
+.menu div {
     text-align: center;
     width: 100%;
     font-size: 25px;
@@ -112,12 +114,12 @@ canvas {
 }
 
 .content-modal {
-width: 90%;
-background-color: #ffffff;
-position: relative;
-border-radius: 5px;
-z-index: 1;
-/* pointer-events: none; */
+    width: 90%;
+    background-color: #ffffff;
+    position: relative;
+    border-radius: 5px;
+    z-index: 1;
+    /* pointer-events: none; */
 }
 
 .content-modal::after {
@@ -134,11 +136,11 @@ z-index: 1;
     position: absolute;
     z-index: -1;
 
-    }
+}
 
-.content-modal p{
-   color: var(--color-button-text-modal);
-    }
+.content-modal p {
+    color: var(--color-button-text-modal);
+}
 
 .hamburger {
     width: 40px;
@@ -168,7 +170,7 @@ input {
     padding: 5px;
 }
 
-.table div{
+.table div {
     width: 50%;
     text-align: center;
     font-size: 25px
@@ -177,7 +179,7 @@ input {
 
 @media (max-width: 767.98px) {
     .wrap-all {
-       min-width : 100%;
-       min-height : 100%;
+        min-width: 100%;
+        min-height: 100%;
     }
 }
